<?xml version="1.0"?>
<package format="2">
<name>tod_core</name>
<version>0.0.0</version>
<description>The tod_core package</description>

<maintainer email="simon.hoffmann@tum.de">Simon Hoffmann</maintainer>

<license>LGPLv3</license>

<buildtool_depend>catkin</buildtool_depend>

<build_depend>roscpp</build_depend>
<build_depend>tod_helper</build_depend>

<build_export_depend>roscpp</build_export_depend>

<exec_depend>roscpp</exec_depend>
<exec_depend>tod_vehicle_config</exec_depend>
<exec_depend>tod_helper</exec_depend>

</package>
