<?xml version="1.0"?>
<package format="2">
    <name>tod_launch</name>
    <version>1.0.0</version>
    <description>The tod_launch package</description>

    <maintainer email="andreas.schimpe@tum.de">Andreas Schimpe</maintainer>

    <license>LGPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <export>
    </export>
</package>
