<?xml version="1.0"?>
<package format="2">
    <name>tod_network</name>
    <version>1.0.0</version>
    <description>the tod network library</description>

    <maintainer email="feiler@ftm.mw.tum.de">Johannes Feiler</maintainer>

    <license>LGPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>tod_msgs</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>tod_msgs</build_export_depend>

    <exec_depend>roscpp</exec_depend>

    <export>
    </export>
</package>
