<?xml version="1.0"?>
<package format="2">
<name>tod_projection_helper</name>
<version>1.0.0</version>
<description>The tod_projection_helper package</description>

<maintainer email="andreas.schimpe@tum.de">Andreas Schimpe</maintainer>

<license>LGPLv3</license>

<buildtool_depend>catkin</buildtool_depend>

<build_depend>roscpp</build_depend>
<build_depend>roslib</build_depend>
<build_export_depend>roscpp</build_export_depend>
<build_export_depend>roslib</build_export_depend>
<exec_depend>roscpp</exec_depend>

</package>
