<?xml version="1.0"?>
<package format="2">
<name>tod_safety_monitoring</name>
<version>0.0.0</version>
<description>The tod_safety_monitoring package</description>

<maintainer email="simon.hoffmann@tum.de">Simon Hoffmann</maintainer>

<license>LGPLv3</license>

<buildtool_depend>catkin</buildtool_depend>

<build_depend>roscpp</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>tod_msgs</build_depend>
<build_depend>message_generation</build_depend>
<build_depend>tod_helper</build_depend>

<build_export_depend>roscpp</build_export_depend>
<build_export_depend>sensor_msgs</build_export_depend>
<build_export_depend>tod_msgs</build_export_depend>
<build_export_depend>message_generation</build_export_depend>

<exec_depend>roscpp</exec_depend>
<exec_depend>message_runtime</exec_depend>

</package>
